2015-02-12  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/65014
	* fold-const.c (fold_binary_loc): When creating {L,R}ROTATE_EXPR,
	use original second operand of arg0 or arg1 instead of
	that adjusted by STRIP_NOPS.

2015-02-11  Jeff Law  <law@redhat.com>

	PR target/63347
	* haifa-sched.c (prune_ready_list): If we have a SCHED_GROUP_P insn
	that needs to be queued, just queue it for a single cycle.

2015-02-11  Jan Hubicka  <hubicka@ucw.cz>

	* ipa.c (symbol_table::remove_unreachable_nodes): Avoid releasing
	bodies of thunks; comment on why.
	* symtab.c (symtab_node::get_partitioning_class): Aliases of extern
	symbols are extern.

2015-02-11  Richard Henderson  <rth@redhat.com>

	PR sanitize/65000
	* tree-eh.c (mark_reachable_handlers): Mark source and destination
	regions of __builtin_eh_copy_values.

2015-02-11  Jakub Jelinek  <jakub@redhat.com>

	PR middle-end/65003
	* varasm.c (place_block_symbol): Assert that DECL_RTL of the
	ultimate alias is MEM with SYMBOL_REF satisfying
	SYMBOL_REF_HAS_BLOCK_INFO_P as its operand.  Don't pass the MEM
	to place_block_symbol, but instead pass the SYMBOL_REF operand of it.

2015-02-11  Thomas Schwinge  <thomas@codesourcery.com>

	* config/nvptx/mkoffload.c: Include "diagnostic.h" instead of
	"diagnostic-core.h".
	(main): Initialize progname, and call diagnostic_initialize.

	* config/nvptx/mkoffload.c (process): Refer to __OFFLOAD_TABLE__
	instead of __OPENMP_TARGET__.

	* config/nvptx/mkoffload.c: Include "gomp-constants.h".
	(process): Use its GOMP_DEVICE_NVIDIA_PTX instead of (wrongly)
	hard-coding PTX_ID.

2015-02-11  H.J. Lu  <hongjiu.lu@intel.com>

	* doc/sourcebuild.texi (pie_enabled): Document.

2015-02-11  Martin Liska  <mliska@suse.cz>

	PR ipa/64813
	* cgraphunit.c (cgraph_node::expand_thunk): Do not create
	a return value for call to a function that is noreturn.

2015-02-11  Richard Biener  <rguenther@suse.de>

	PR lto/65015
	* dwarf2out.c (gen_producer_string): Drop -fltrans-output-list